@@ -680,6 +680,12 @@ struct text_object *construct_text_object(const char *s, const char *arg, long
 	END OBJ_ARG(pid_stdout, 0, "pid_stdout needs a pid as argument")
 		obj->sub = malloc(sizeof(struct text_object));
 		extract_variable_text_internal(obj->sub, arg);
+	END OBJ_ARG(pid_threads, 0, "pid_threads needs a pid as argument")
+		obj->sub = malloc(sizeof(struct text_object));
+		extract_variable_text_internal(obj->sub, arg);
+	END OBJ_ARG(pid_thread_list, 0, "pid_thread_list needs a pid as argument")
+		obj->sub = malloc(sizeof(struct text_object));
+		extract_variable_text_internal(obj->sub, arg);
 	END OBJ_ARG(pid_uid, 0, "pid_uid needs a pid as argument")
 		obj->sub = malloc(sizeof(struct text_object));
 		extract_variable_text_internal(obj->sub, arg);
@@ -1353,6 +1359,8 @@ void free_text_objects(struct text_object *root, int internal)
 			case OBJ_pid_stderr:
 			case OBJ_pid_stdin:
 			case OBJ_pid_stdout:
+			case OBJ_pid_threads:
+			case OBJ_pid_thread_list:
 			case OBJ_pid_uid:
 			case OBJ_pid_euid:
 			case OBJ_pid_suid:
