@@ -1,3 +1,6 @@
+2009-11-16
+	* Added support for $pid_threads and $pid_thread_list
+
 2009-11-15
 	* Added support for $pid_parent, $pid_uid, $pid_euid, $pid_suid,
 	$pid_fsuid, $pid_gid, $pid_egid, $pid_sgid and $pid_fsgid
